feat(openapi): interfaces properly generated
Signed-off-by: Marc Nuri <marc@marcnuri.com>